Ensure we keep selection direction when applying style changes

For some style changes we update the Selection start and end boundaries.
We must ensure we keep the same selection direction.

Bug: 733603
Change-Id: I0644bdf41bb60bc90166930c61a0b4fe40d000e2